# ggx-docs

./: .gitignore  404.html  AGENTS.md  CNAME  README.md  astro.config.mjs  build.sh  index.html  index.md  llms-full.txt  llms.json  llms.txt  mkdocs.yml  package-lock.json  package.json  pdf_handler.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  sitemap-0.xml  sitemap-index.xml  sitemap.xml  skills-lock.json  tsconfig.json
.claude/: launch.json
.github/workflows/: deploy.yml
_astro/: ImageZoom.astro_astro_type_script_index_0_lang.CZmBqK-T.js  ImageZoom.astro_astro_type_script_index_0_lang.DiZIKzwI.js  common.BG7HK5Ap.css  common.GQw32Oi5.css  llm-judges.IJOa5C4p.css
assets/stylesheets/: print-pdf.css
corridor_docs/: __init__.py  cli.py  user_manual.py
deploy-and-monitor/: index.html  index.md
deploy-and-monitor/annotation-queues/: index.html  index.md
deploy-and-monitor/direct-to-production/: index.html  index.md
deploy-and-monitor/oversight/: index.html  index.md
deploy-and-monitor/performance/: index.html  index.md
docs/: .nav.yml  index.md
docs/deploy-and-monitor/: annotation-queues.md  direct-to-production.md  index.md  oversight.md  performance.md
docs/integrations/: index.md
evaluate-and-approve/: index.html  index.md
faq/: index.html  index.md
integrations/: index.html  index.md
llm-judges/: index.html  index.md
pagefind/: pagefind-entry.json  pagefind.en_5efff385c8.pf_meta  pagefind.en_7ebeb72d13.pf_meta
public/: robots.txt
register-and-refine/: index.html  index.md
search/: search_index.json
src/: content.config.ts
(+585 files in other folders)
